--- a/biome-z-react/src/pages/Explore.css
+++ b/biome-z-react/src/pages/Explore.css
@@ -1,3 +1,10 @@
+.venn-box {
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container {
     margin: 1rem;
     padding-top: 60px;
